# cpp-functional-programming

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
01-basics/: README.md
01-functions/: README.md
01-functions/examples/: 01_lambdas.cpp
01-functions/exercises/: exercises.cpp  solutions.cpp
02-immutability/: README.md
02-immutability/examples/: 01_immutability.cpp
02-immutability/exercises/: exercises.cpp  solutions.cpp
03-pure-functions/: README.md
03-pure-functions/examples/: 01_pure_functions.cpp
03-pure-functions/exercises/: exercises.cpp  solutions.cpp
04-higher-order-functions/: README.md
04-higher-order-functions/examples/: 01_higher_order_functions.cpp
04-higher-order-functions/exercises/: exercises.cpp  solutions.cpp
05-currying-partial/: README.md
05-currying-partial/examples/: 01_currying_partial.cpp
05-currying-partial/exercises/: exercises.cpp  solutions.cpp
05-functional-composition/: README.md
06-algebraic-types/: README.md
06-composition/: README.md
06-composition/examples/: 01_composition.cpp
06-composition/exercises/: exercises.cpp  solutions.cpp
07-monads/: README.md
07-ranges/: README.md
07-ranges/examples/: 01_ranges.cpp
07-ranges/exercises/: exercises.cpp  solutions.cpp
08-advanced-patterns/: README.md
08-algebraic-types/: README.md
08-algebraic-types/examples/: 01_algebraic_types.cpp
08-algebraic-types/exercises/: exercises.cpp  solutions.cpp
09-error-handling/: README.md
09-error-handling/examples/: 01_error_handling.cpp
09-error-handling/exercises/: exercises.cpp  solutions.cpp
10-functors-monads/: README.md
10-functors-monads/examples/: 01_functors_monads.cpp
10-functors-monads/exercises/: exercises.cpp  solutions.cpp
11-lazy-memoization/: README.md
11-lazy-memoization/examples/: 01_lazy_memoization.cpp
11-lazy-memoization/exercises/: exercises.cpp  solutions.cpp
12-capstone/: README.md
12-capstone/examples/: 01_query_dsl.cpp
12-capstone/exercises/: exercises.cpp  solutions.cpp
examples/: CMakeLists.txt
examples/advanced/: 06_algebraic_types.cpp  07_monads.cpp  08_advanced_patterns.cpp
examples/basic/: 01_lambdas.cpp  02_immutability.cpp  03_pure_functions.cpp
exercises/: 01_basics_exercises.cpp  02_immutability_exercises.cpp  03_pure_functions_exercises.cpp  04_higher_order_functions_exercises.cpp  05_functional_composition_exercises.cpp  06_algebraic_types_exercises.cpp  07_monads_exercises.cpp  08_advanced_patterns_exercises.cpp  CMakeLists.txt
exercises/solutions/: 01_basics_solutions.cpp  02_immutability_solutions.cpp  03_pure_functions_solutions.cpp  04_higher_order_functions_solutions.cpp  05_functional_composition_solutions.cpp  06_algebraic_types_solutions.cpp  07_monads_solutions.cpp  08_advanced_patterns_solutions.cpp
