# Basic examples (01-03)
add_executable(01_lambdas basic/01_lambdas.cpp)
add_executable(02_immutability basic/02_immutability.cpp)
add_executable(03_pure_functions basic/03_pure_functions.cpp)

# Intermediate examples (04-06)
add_executable(04_higher_order_functions intermediate/04_higher_order_functions.cpp)
add_executable(05_functional_composition intermediate/05_functional_composition.cpp)

# Advanced examples (06-08)
add_executable(06_algebraic_types advanced/06_algebraic_types.cpp)
add_executable(07_monads advanced/07_monads.cpp)
add_executable(08_advanced_patterns advanced/08_advanced_patterns.cpp)
