# Basic exercises (01-03)
add_executable(01_basics_exercises 01_basics_exercises.cpp)
add_executable(01_basics_solutions solutions/01_basics_solutions.cpp)
add_executable(02_immutability_exercises 02_immutability_exercises.cpp)
add_executable(02_immutability_solutions solutions/02_immutability_solutions.cpp)
add_executable(03_pure_functions_exercises 03_pure_functions_exercises.cpp)
add_executable(03_pure_functions_solutions solutions/03_pure_functions_solutions.cpp)

# Intermediate exercises (04-06)
add_executable(04_higher_order_functions_exercises 04_higher_order_functions_exercises.cpp)
add_executable(04_higher_order_functions_solutions solutions/04_higher_order_functions_solutions.cpp)
add_executable(05_functional_composition_exercises 05_functional_composition_exercises.cpp)
add_executable(05_functional_composition_solutions solutions/05_functional_composition_solutions.cpp)

# Advanced exercises (06-08)
add_executable(06_algebraic_types_exercises 06_algebraic_types_exercises.cpp)
add_executable(06_algebraic_types_solutions solutions/06_algebraic_types_solutions.cpp)
add_executable(07_monads_exercises 07_monads_exercises.cpp)
add_executable(07_monads_solutions solutions/07_monads_solutions.cpp)
add_executable(08_advanced_patterns_exercises 08_advanced_patterns_exercises.cpp)
add_executable(08_advanced_patterns_solutions solutions/08_advanced_patterns_solutions.cpp)
